--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
 
@@ -30,7 +31,12 @@
      <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
-        <li>Include your CSS notes here</li> 
+        <li>A padding indicates how much space we want around the content inside an element.</li>
+        <li>Using an external CSS style sheet.</li>
+        <li>Three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
+        <li>Assigned the CSS rule based on the element name. </li>
+        <li> Wrote new declarations for a new CSS rule by designating a class attribute as the selector.</li>
+        <li>Margin indicates how much space we want around the outside of an element.</li> 
       </ul>
     </section>
    
@@ -49,7 +55,6 @@
         </ul>
       </section>
     </main>
-
     <footer>
       <p>I can code!</p>
     </footer>
