--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
       <section class="card" id="Java Script-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Include your Java Script notes here</li> 
+          <li>To execute a function, we must call it in our code.</li>
+          <li>A function's name is followed by parentheses.</li>
+           <li>To create a function, we use the function keyword.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li></li>
         </ul>
       </section>
     </main>
