Created the README file

--- a/index.html
+++ b/index.html
@@ -1,69 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/style.css">
-    <title>Prework Study Guide</title>
-  </head>
 
-  <body>
-    <header id="header">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-      <h2>✨ Open the Console to See What's Happening ✨</h2>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./assets/style.css">
+  <title>Prework Study Guide</title>
+</head>
 
-    <main>
-      <section class="card" id="html-section">
-        <h2>HTML</h2>
-        <ul>
-          <li>Enter your HTML notes here</li>
-          <li>The head element contains information about the webpage.</li>
-          <li>Thea information included in the header, helps SEO</li> 
-          <li>Elements are semantic elements that define a section in a document that contains thematic content</li>
-          <li>In semantic HTML elements, the name of the element describes its content and the role it plays on a webpage.</li>
-          <li>alt atribute helps people who use assistive technologies</li>
-          <li>The body element represents the visible content shown to the user.</li>
-       </ul>
-     </section>
+<body>
+  <header id="header">
+    <h1>Prework Study Guide</h1>
+    <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+    <h2>✨ Open the Console to See What's Happening ✨</h2>
+  </header>
 
-     <section class="card" id="css-section">
+  <main>
+    <section class="card" id="html-section">
+      <h2>HTML</h2>
+      <ul>
+        <li>Enter your HTML notes here</li>
+        <li>The head element contains information about the webpage.</li>
+        <li>Thea information included in the header, helps SEO</li>
+        <li>Elements are semantic elements that define a section in a document that contains thematic content</li>
+        <li>In semantic HTML elements, the name of the element describes its content and the role it plays on a webpage.
+        </li>
+        <li>alt atribute helps people who use assistive technologies</li>
+        <li>The body element represents the visible content shown to the user.</li>
+      </ul>
+    </section>
+
+    <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
         <li>A padding indicates how much space we want around the content inside an element.</li>
         <li>Using an external CSS style sheet.</li>
-        <li>Three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
+        <li>Three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet.
+        </li>
         <li>Assigned the CSS rule based on the element name. </li>
         <li> Wrote new declarations for a new CSS rule by designating a class attribute as the selector.</li>
-        <li>Margin indicates how much space we want around the outside of an element.</li> 
+        <li>Margin indicates how much space we want around the outside of an element.</li>
       </ul>
     </section>
-   
-      <section class="card" id="git-section">
-        <h2>Git</h2>
-        <ul>
-          <li>git status: checks what branch we are currently on</li> 
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-        </ul>
-      </section>
-   
-      <section class="card" id="Java Script-section">
-        <h2>JavaScript</h2>
-        <ul>
-          <li>To execute a function, we must call it in our code.</li>
-          <li>A function's name is followed by parentheses.</li>
-           <li>To create a function, we use the function keyword.</li>
-          <li>A variable is a named container that allows us to store data in our code.</li>
-          <li>Control flow is the order in which a computer executes code in a script.</li>
-        <li></li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <p>I can code!</p>
-    </footer>
-    <script src="./assets/script.js"></script>
-  </body>
+
+    <section class="card" id="git-section">
+      <h2>Git</h2>
+      <ul>
+        <li>git status: checks what branch we are currently on</li>
+        <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+      </ul>
+    </section>
+
+    <section class="card" id="Java Script-section">
+      <h2>JavaScript</h2>
+      <ul>
+        <li>To execute a function, we must call it in our code.</li>
+        <li>A function's name is followed by parentheses.</li>
+        <li>To create a function, we use the function keyword.</li>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>I can code!</p>
+  </footer>
+  <script src="./assets/script.js"></script>
+</body>
+
 </html>
